5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1674_1107.log
== TEST (2019-04-25 11:36:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h = int(input("Dia de hohe: "))
f = int(input("Dia desejado: "))

if(h<0 and h>6):
	print("A entrada",h,"eh invalida")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h = int(input("Dia de hohe: "))
#f = int(input("Dia desejado: "))

if(h<0 and h>6):
	print("A entrada",h,"eh invalida")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
h = int(input("Dia de hohe: "))
#f = int(input("Dia desejado: "))

if(h<0 or h>6):
	print("A entrada",h,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:28:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	f=domingo
	if(p==0)
		p=domingo
	elif(p=21):
		p=segunda
	elif(p==2):
		p=terca
	elif(p==3):
		p=quarta
	elif(p==4):
		p=quinta
	elif(p==5):
		p=sexta
	elif(p==6):
		p=sabado
	
	
	print("Hoje eh",p,"e o dia futuro eh",f)
-- ERROR:
File "XXXX", line 11
    if(p==0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:28:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	f=domingo
	if(p==0):
		p=domingo
	elif(p=21):
		p=segunda
	elif(p==2):
		p=terca
	elif(p==3):
		p=quarta
	elif(p==4):
		p=quinta
	elif(p==5):
		p=sexta
	elif(p==6):
		p=sabado
	
	
	print("Hoje eh",p,"e o dia futuro eh",f)
-- ERROR:
File "XXXX", line 13
    elif(p=21):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:29:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	f=domingo
	if(p==0):
		p=domingo
	elif(p==21):
		p=segunda
	elif(p==2):
		p=terca
	elif(p==3):
		p=quarta
	elif(p==4):
		p=quinta
	elif(p==5):
		p=sexta
	elif(p==6):
		p=sabado
	
	
	print("Hoje eh",p,"e o dia futuro eh",f)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:30:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff=domingo
	if(p==0):
		p=domingo
	elif(p==21):
		p=segunda
	elif(p==2):
		p=terca
	elif(p==3):
		p=quarta
	elif(p==4):
		p=quinta
	elif(p==5):
		p=sexta
	elif(p==6):
		p=sabado
	
	
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:31:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:32:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((p+f)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:33:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((p+f)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((p+f)%7==3)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:37:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((p+f)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((p+f)%7==3)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((p+f)%7==4)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((p+f)%7==5)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((p+f)%7==6)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((p+f)%7==7)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:37:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((p+f)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((p+f)%7==3)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((p+f)%7==4)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((p+f)%7==5)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((p+f)%7==6)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((p+f)%7==7)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:37:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((p+f)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((p+f)%7==3)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((p+f)%7==4)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((p+f)%7==5)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((p+f)%7==6)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((p+f)%7==7)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- EXECUTION TIME:
0.159537
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh domingo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:40:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((p+f)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((p+f)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((p+f)%7==3)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((p+f)%7==4)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((p+f)%7==5)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((p+f)%7==6)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((p+f)%7==7)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:50:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((f-p)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((p+f)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((p+f)%7==3)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((p+f)%7==4)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((p+f)%7==5)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((p+f)%7==6)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((p+f)%7==7)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:52:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hohe: "))
f = int(input("Dia desejado no futuro: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((f-p)%7==1)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((f-p)%7==2)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((f-p)%7==3)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((f-p)%7==4)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((f-p)%7==5)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((f-p)%7==6)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((f-p)%7==7)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==21):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:16:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hoje: "))
f = int(input("Numero de dias apos hoje: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((f+p)%7==0)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((f+p)%7==1)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((f+p)%7==2)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((f+p)%7==3)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((f+p)%7==4)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((f+p)%7==5)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((f+p)%7==6)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:17:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hoje: "))
f = int(input("Numero de dias apos hoje: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((f+p)%7==0)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((f+p)%7==1)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((f+p)%7==2)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((f+p)%7==3)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((f+p)%7==4)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((f+p)%7==5)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((f+p)%7==6)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:17:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hoje: "))
f = int(input("Numero de dias apos hoje: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((f+p)%7==0)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((f+p)%7==1)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((f+p)%7==2)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((f+p)%7==3)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((f+p)%7==4)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((f+p)%7==5)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((f+p)%7==6)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- EXECUTION TIME:
0.15979
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:59:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = int(input("Dia de hoje: "))
f = int(input("Numero de dias apos hoje: "))

if(p<0 or p>6):
	print("A entrada",p,"eh invalida")
elif(p+f==0 or ((f+p)%7==0)):
	ff="domingo"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==1 or ((f+p)%7==1)):
	ff="segunda"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==2 or ((f+p)%7==2)):
	ff="terca"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==3 or ((f+p)%7==3)):
	ff="quarta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==4 or ((f+p)%7==4)):
	ff="quinta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==5 or ((f+p)%7==5)):
	ff="sexta"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
elif(p+f==6 or ((f+p)%7==6)):
	ff="sabado"
	if(p==0):
		p="domingo"
	elif(p==1):
		p="segunda"
	elif(p==2):
		p="terca"
	elif(p==3):
		p="quarta"
	elif(p==4):
		p="quinta"
	elif(p==5):
		p="sexta"
	elif(p==6):
		p="sabado"
	print("Hoje eh",p,"e o dia futuro eh",ff)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
